pase la pagina de ABOUT a sass y agregue SEO

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -12,16 +12,16 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-        <title>About Artist</title>
+        <title>About Artist | Formacion y especializacion: Arquitectura - Diseño - Fotografia</title>
     </head>
 </html>
 <body class="tipografia"> 
     <header>
         <nav>
             <!--LOGO SUPERIOR IZQUIERDO CON LINK AL INICIO-->
-            <div id="loggo" class="linea">
+            <span id="loggo" class="linea">
                 <a class="linea" href="../index.html"><h1 class="linea logo">ZMF</h1></a>
-            </div>
+            </span>
             <!--TITULO DE LA PÁGINA EN LA QUE ESTOY-->
             <div id="pag" class="linea">
                 <h3 class="linea">ABOUT ARTIST</h3>
@@ -38,12 +38,12 @@
     </header>    
 
     <main class="contenedor_grid">
-        <div class=" bloque_img arq d1"></div>
-        <div class="d1 a1">
+        <img class=" bloque_img d1" title="Imagen descriptiva de la Arquitectura" src="../image/arquitectura.jpg">
+        <span class="d1 a1">
             <h3 class="nombre">ARQUITECTURA</h3>
-            <div>
+
                 <p class="descripcion">Conjunto de obras, edificios o monumentos de un autor, de un estilo, de un país o de un período determinados.</p>
-            </div>
+
             <div class="flex">
                 <div class="todos">
 
@@ -55,9 +55,9 @@
 
                 </div>
             </div>
-        </div>
-        <div class="bloque_img fotografia d1"></div>
-        <div class="d1 a2">
+        </span>
+        <img class=" bloque_img d1" title="Imagen descriptiva de La Fotografia" src="../image/fotografia.jpg">
+        <span class="d1 a2">
             <h3 class=" nombre">FOTOGRAFIA</h3>
             <div>
                 <p class="descripcion">Técnica de obtención de imágenes por la acción química de la luz sobre una superficie con unas características determinadas.</p>
@@ -73,9 +73,9 @@
 
                 </div>
             </div>
-        </div>    
-        <div class=" bloque_img diseño d1"></div>
-        <div class="d1 a3">
+        </span>    
+        <img class=" bloque_img d1" title="Imagen descriptiva de Diseño" src="../image/diseño.jpg"> 
+        <span class="d1 a3">
             <h3 class=" nombre">DISEÑO</h3>
             <div>
                 <p class="descripcion">Actividad creativa que tiene por fin proyectar objetos que sean útiles y estéticos.</p>
@@ -91,9 +91,9 @@
 
                 </div>
             </div>
-        </div>    
+        </span>    
         <footer> <!--PIE DE PÁGINA-->
-            <div>
+
                 <div class="linea">
                     <!--LOGO INSTA-->
                     <a href=""><img src="../image/bxl-instagram.svg"></a>
@@ -109,7 +109,7 @@
                 <div  class="linea">
                     <!--LOGO INSTA 2-->
                     <a href=""><img src="../image/bxl-instagram.svg"></a>
-                </div>
+
         </footer>
     </main>
 
