--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-        <title>HOME</title>
+        <title>ZMF | Porfolio profesional Zoe María Furuken</title>
+        <meta name="description" content="Pagina web completa del Porfolio profesional de Zoe María Furuken. Estudiante de Arquitectura en FADU, Fotografa y diseñadora. Lleva varios desarrollos de proyectos estructurales en lo que va de su carrera. Realizo un curso profesional de fotografía y posteriormente realizo distintos fotoshoots. Actualmente se encuentra en proceso de desarrollo y lanzamiento de una marca de indumentaria de streetwear. Realiza diseños artisticos de manera digital y a papel.">
+        <meta name="keywords" content="Arquitectura, UBA, FADU, Fotografia, Diseño, Indumentaria, Industria, profesional, fotoshoot, marketing, desarrollo, arte, desarrolllo, porfolio, maquetas, artista, cv">
     </head>
 </html>
 
@@ -37,7 +39,7 @@
         <div>
             <h1 id="nombre"> ZOE MARÍA FURUKEN </h1>
         </div>
-        <h4> ARQUITECTURA  -  FOTOGRAFÍA  -  DISEÑO</h4>
+        <h2>ARQUITECTURA  -  FOTOGRAFÍA  -  DISEÑO</h2>
     </span>   
 
     <footer id="pie">
