--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-        <title>Contact</title>
+        <title>Contact | Comunicate con ella a traves de este formulario. Sacate las duduas que tengas o coordina una reuinion</title>
     </head>
 </html>
 
