--- a/Pages/cv.html
+++ b/Pages/cv.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-        <title>CV</title>
+        <title>CV | Podes ver y descargar su CV</title>
     </head>
 </html>
 
