--- a/Pages/works.html
+++ b/Pages/works.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-        <title>Works</title>
+        <title>Works | Mira todos sus trabajos, proyectos y diseños que realizo</title>
     </head>
 </html>
 
